@@ -29,9 +29,13 @@ from tipfy.ext.wtforms.validators import ValidationError
 #: - ``recaptcha_public_key``: Public key for ReCaptcha.
 #:
 #: - ``recaptcha_private_key``: Private key for ReCaptcha.
+#:
+#: - ``csrf_tokens``: Maximum number of CSRF protection tokens to store in
+#:   session.
 default_config = {
     'recaptcha_options':     None,
     'recaptcha_use_ssl':     False,
     'recaptcha_public_key':  REQUIRED_VALUE,
     'recaptcha_private_key': REQUIRED_VALUE,
+    'csrf_tokens':           5,
 }
