@@ -9,10 +9,13 @@
     :copyright: 2010 WTForms authors.
     :license: BSD, see LICENSE.txt for more details.
 """
+import uuid
+
 from wtforms import Form as BaseForm
 
-from tipfy import Request
-from tipfy.ext.wtforms.fields import FileField
+from tipfy import Request, get_config
+from tipfy.ext.wtforms.fields import FileField, CsrfTokenField
+from tipfy.ext.wtforms.validators import CsrfToken
 
 try:
     from tipfy.ext import i18n
@@ -21,6 +24,15 @@ except ImportError, e:
 
 
 class Form(BaseForm):
+    csrf_protection = False
+    csrf_token = CsrfTokenField()
+
+    def __init__(self, *args, **kwargs):
+        self.csrf_protection_enabled = kwargs.pop('csrf_protection',
+            self.csrf_protection)
+
+        super(Form, self).__init__(*args, **kwargs)
+
     def process(self, formdata=None, obj=None, **kwargs):
         """
         Take form, object data, and keyword arg input and have the fields
@@ -37,11 +49,21 @@ class Form(BaseForm):
             form will assign the value of a matching keyword argument to the
             field, if provided.
         """
+        if not self.csrf_protection_enabled:
+            self._fields.pop('csrf_token', None)
+
         if isinstance(formdata, Request):
             request = formdata
             formdata = request.form
             filedata = request.files
+
+            if self.csrf_protection_enabled:
+                kwargs['csrf_token'] = self._get_csrf_token(request)
         else:
+            if self.csrf_protection_enabled:
+                raise TypeError('You must pass a request object to the form '
+                    'to use CSRF protection')
+
             filedata = None
             if formdata is not None and not hasattr(formdata, 'getlist'):
                 raise TypeError("formdata should be a multidict-type wrapper "
@@ -60,10 +82,23 @@ class Form(BaseForm):
             else:
                 field.process(data)
 
-    def _get_translations(self):
-        ctx = _request_ctx_stack.top
+    def _get_session(self, request):
+        session_store = request.registry.get('session_store', None)
+        if not session_store:
+            raise TypeError('You must enable sessions to use '
+                'CSRF protection')
 
-        if ctx is not None and hasattr(ctx, 'babel_instance'):
-            return babel.get_translations()
+        return session_store.get_session()
 
-        return None
+    def _get_csrf_token(self, request):
+        token = str(uuid.uuid4())
+        token_list = self._get_session(request).setdefault('_csrf_token', [])
+        token_list.append(token)
+        # Store a maximum number of tokens.
+        maximum_tokens = get_config('tipfy.ext.wtforms', 'csrf_tokens')
+        while len(token_list) > maximum_tokens:
+            token_list.pop(0)
+
+        # Set the validation rule for the tokens.
+        self._fields['csrf_token'].validators = [CsrfToken(token_list)]
+        return token
